# pokidex

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
AGENT/: ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  PROJECT_PLAN.md  REQUIREMENTS.md  SETUP.md  STATUS.md
forged-api/: Dockerfile  go.mod
forged-api/cmd/api/: main.go
forged-api/internal/handlers/: analyze.go  coach.go  common.go  health.go  plan.go  workout.go
forged-api/internal/middleware/: app_key.go  auth.go  logging.go  recovery.go
src/: file_picker.rs  gemini.rs  main.rs  pokeapi.rs  rag.rs
