[package]
name = "pokidex"
version = "0.1.0"
edition = "2021"

[dependencies]
rustemon = "4.3.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
async-trait = "0.1"
